--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -10,6 +10,19 @@
 		top: -300px;
 		left: 80%;
 		z-index: -1;
+
+		&::after {
+			@include min(1440) {
+				content: "";
+				display: block;
+				width: 30vw;
+				height: 50px;
+				background-color: rgba(#1f4cca, 0.03);
+				position: absolute;
+				left: 100%;
+				bottom: 5px;
+			}
+		}
 	}
 
 	&__text {
