--- a/src/styles/blocks/chart.scss
+++ b/src/styles/blocks/chart.scss
@@ -10,6 +10,32 @@
 		top: 56%;
 		left: -110px;
 		z-index: -1;
+
+		&::before {
+			@include min(1440) {
+				content: "";
+				display: block;
+				width: 30vw;
+				height: 50px;
+				background-color: rgba(#1f4cca, 0.03);
+				position: absolute;
+				right: 100%;
+				top: 0;
+			}
+		}
+
+		&::after {
+			@include min(1440) {
+				content: "";
+				display: block;
+				width: 30vw;
+				height: 50px;
+				background-color: rgba(#1f4cca, 0.03);
+				position: absolute;
+				left: 100%;
+				bottom: 5px;
+			}
+		}
 	}
 
 	&__text {
