--- a/src/styles/blocks/products-card.scss
+++ b/src/styles/blocks/products-card.scss
@@ -4,18 +4,33 @@
 	width: 100%;
 	background-color: $color-card;
 	border-radius: 10px;
-	padding: 30px 30px 38px;
+	padding: 30px 30px 0;
+	transition: transform 0.3s ease;
+
+	&:hover {
+		transform: scale(1.05);
+	}
+
+	&__image-wrapper {
+		padding-bottom: 16px;
+		border-bottom: 1px solid $color-main;
+	}
 
 	&__image {
 		width: 100%;
 		height: auto;
 	}
 
+	&__bottom {
+		display: flex;
+		flex-direction: column;
+		height: 100%;
+		padding-bottom: 38px;
+	}
+
 	&__text {
 		font-size: 10px;
-		border-top: 1px solid $color-main;
 		padding-top: 19px;
-		margin-top: 16px;
 		margin-bottom: 23px;
 	}
 
