--- a/src/styles/blocks/hystmodal.scss
+++ b/src/styles/blocks/hystmodal.scss
@@ -57,6 +57,12 @@
 			opacity: 0.7;
 		}
 
+		&--left {
+			top: 20px;
+			right: unset;
+			left: 20px;
+		}
+
 		svg {
 			transition: 0.3s ease;
 		}
