--- a/src/styles/base/global.scss
+++ b/src/styles/base/global.scss
@@ -289,9 +289,16 @@ ol {
 }
 
 .form-item-error {
+	position: absolute;
+	bottom: -13px;
+	left: 0;
 	color: $color-error;
 	font-size: 10px;
 	line-height: 1.5;
+}
+
+.ss-form-item {
+	position: relative;
 }
 
 .ss-form-item input {
