--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -1,12 +1,10 @@
 .form {
-	width: 100%;
-	border-radius: 10px;
-	border: 2px solid $color-main;
-	padding: 30px 77px;
+	$parent: &;
 
-	@include max(ti) {
-		padding: 20px 15px;
-	}
+	width: 100%;
+	background-color: $white;
+	transform-style: preserve-3d;
+	transition: transform 0.6s;
 
 	@include max(t) {
 		padding: 0;
@@ -14,9 +12,102 @@
 		border: 0;
 	}
 
+	&.rotate {
+		transform: rotateY(180deg);
+
+		#{$parent}__front {
+			min-height: 750px;
+
+			@include max(ti) {
+				min-height: 674px;
+			}
+
+			@include max(t) {
+				min-height: 660px;
+			}
+
+			@include max(450) {
+				min-height: 660px;
+			}
+
+			@include max(370) {
+				min-height: 660px;
+			}
+
+			@include max(340) {
+				min-height: 660px;
+			}
+		}
+	}
+
+	&__front,
+	&__back {
+		position: absolute;
+		inset: 0;
+		backface-visibility: hidden;
+	}
+
+	&__front {
+		position: relative;
+		display: flex;
+		align-items: flex-end;
+		justify-content: center;
+		width: 100%;
+		padding-bottom: 20px;
+		background-color: #10065f;
+		min-height: 750px;
+		cursor: pointer;
+
+		@include max(ti) {
+			min-height: 674px;
+		}
+
+		@include max(t) {
+			min-height: 660px;
+		}
+
+		@include max(450) {
+			min-height: 550px;
+		}
+
+		@include max(370) {
+			min-height: 500px;
+		}
+
+		@include max(340) {
+			min-height: 480px;
+		}
+	}
+
+	&__back {
+		transform: rotateY(180deg);
+		border: 2px solid $color-main;
+		border-radius: 10px;
+		background-color: $white;
+		padding: 30px 70px;
+		margin: 40px 27px;
+
+		@include max(ti) {
+			padding: 20px 15px;
+		}
+
+		@include max(t) {
+			margin: 40px 10px;
+		}
+	}
+
 	&--policy {
 		overflow: hidden;
 		padding: 0;
+	}
+
+	&__bg {
+		position: absolute;
+		inset: 0;
+		width: 100%;
+		height: 100%;
+		object-fit: contain;
+		object-position: top;
 	}
 
 	&__scroll {
