--- a/src/styles/blocks/hystmodal.scss
+++ b/src/styles/blocks/hystmodal.scss
@@ -4,14 +4,12 @@
 	&--form {
 		#{$parent} {
 			&__window {
-				max-width: 540px;
+				position: relative;
+				max-width: 500px;
 				width: 100%;
 				border-radius: 10px;
-				padding: 40px 27px;
-
-				@include max(t) {
-					padding: 40px 10px;
-				}
+				padding: 0;
+				background-color: transparent;
 			}
 
 			&__close {
